--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -800,49 +800,49 @@ Men
 ---------------------------------------------
 */
 
-#men {
+#specialties {
   padding-top: 90px;
   padding-bottom: 90px;
   border-bottom: 1px solid #f8f8f8;
 }
 
-#men .section-heading {
+#specialties .section-heading {
   margin-bottom: 60px;
 }
 
-#men .item .down-content {
+#specialties .item .down-content {
   padding-top: 30px;
   position: relative;
   z-index: 3;
   background-color: #fff;
 }
 
-#men .item .down-content h4 {
+#specialties .item .down-content h4 {
   font-size: 22px;
   color: #2a2a2a;
   font-weight: 700;
   margin-bottom: 8px;
 }
 
-#men .item .down-content span {
+#specialties .item .down-content span {
   font-size: 18px;
   color: #a1a1a1;
   font-weight: 500;
   display: block;
 }
 
-#men .item .down-content ul.stars {
+#specialties .item .down-content ul.stars {
   position: absolute;
   right: 0;
   top: 30px;
 }
 
-#men .item .down-content ul.stars li {
+#specialties .item .down-content ul.stars li {
   display: inline;
   font-size: 13px;
 }
 
-#men .item .thumb .hover-content {
+#specialties .item .thumb .hover-content {
   position: absolute;
   z-index: 2;
   text-align: center;
@@ -853,22 +853,22 @@ Men
   transition: all .5s;
 }
 
-#men .item .thumb:hover .hover-content {
+#specialties .item .thumb:hover .hover-content {
   bottom: 30px;
   opacity: 1;
   visibility: visible;
 }
 
-#men .item .thumb {
+#specialties .item .thumb {
   position: relative;
 }
 
-#men .item .thumb .hover-content ul li {
+#specialties .item .thumb .hover-content ul li {
   display: inline;
   margin: 0px 10px;
 }
 
-#men .item .thumb .hover-content ul li a {
+#specialties .item .thumb .hover-content ul li a {
   width: 50px;
   height: 50px;
   text-align: center;
@@ -879,7 +879,7 @@ Men
 }
 
 
-#men .owl-nav {
+#specialties .owl-nav {
   text-align: center;
   position: absolute;
   width: 100%;
@@ -887,22 +887,22 @@ Men
   transform: translateY(10px);
 }
 
-#men .owl-dots {
+#specialties .owl-dots {
   display: none;
 }
     
-#men .owl-nav .owl-prev{
+#specialties .owl-nav .owl-prev{
   position: absolute;
   left: -80px;
   outline: none;
 }
 
-#men .owl-nav .owl-prev span,
-#men .owl-nav .owl-next span {
+#specialties .owl-nav .owl-prev span,
+#specialties .owl-nav .owl-next span {
   opacity: 0;
 }
 
-#men .owl-nav .owl-prev:before {
+#specialties .owl-nav .owl-prev:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #fff;
@@ -916,31 +916,31 @@ Men
   border :1px solid #000;
 }
 
-#men .owl-nav .owl-prev {
+#specialties .owl-nav .owl-prev {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#men .owl-nav .owl-prev:hover {
+#specialties .owl-nav .owl-prev:hover {
   opacity: 1;
 }
 
-#men .owl-nav .owl-next {
+#specialties .owl-nav .owl-next {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#men .owl-nav .owl-next:hover {
+#specialties .owl-nav .owl-next:hover {
   opacity: 1;
 }
 
-#men .owl-nav .owl-next{
+#specialties .owl-nav .owl-next{
   outline: none;
   position: absolute;
   right: -85px;
 }
 
-#men .owl-nav .owl-next:before {
+#specialties .owl-nav .owl-next:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #fff;
@@ -961,24 +961,24 @@ Women
 ---------------------------------------------
 */
 
-#women {
+#services {
   padding-top: 90px;
   padding-bottom: 90px;
   border-bottom: 1px solid #f8f8f8;
 }
 
-#women .section-heading {
+#services .section-heading {
   margin-bottom: 60px;
 }
 
-#women .item .down-content {
+#services .item .down-content {
   padding-top: 30px;
   position: relative;
   z-index: 3;
   /*background-color: #fff;*/
 }
 
-#women .item .down-content h4 {
+#services .item .down-content h4 {
   font-size: 18px;
   color: #f5f3ed;
   font-weight: 300;
@@ -987,25 +987,25 @@ Women
     text-transform: uppercase;
 }
 
-#women .item .down-content span {
+#services .item .down-content span {
   font-size: 18px;
   color: #a1a1a1;
   font-weight: 500;
   display: block;
 }
 
-#women .item .down-content ul.stars {
+#services .item .down-content ul.stars {
   position: absolute;
   right: 0;
   top: 30px;
 }
 
-#women .item .down-content ul.stars li {
+#services .item .down-content ul.stars li {
   display: inline;
   font-size: 13px;
 }
 
-#women .item .thumb .hover-content {
+#services .item .thumb .hover-content {
   position: absolute;
   z-index: 2;
   text-align: center;
@@ -1016,22 +1016,22 @@ Women
   transition: all .5s;
 }
 
-#women .item .thumb:hover .hover-content {
+#services .item .thumb:hover .hover-content {
   bottom: 30px;
   opacity: 1;
   visibility: visible;
 }
 
-#women .item .thumb {
+#services .item .thumb {
   position: relative;
 }
 
-#women .item .thumb .hover-content ul li {
+#services .item .thumb .hover-content ul li {
   display: inline;
   margin: 0px 10px;
 }
 
-#women .item .thumb .hover-content ul li a {
+#services .item .thumb .hover-content ul li a {
   width: 50px;
   height: 50px;
   text-align: center;
@@ -1042,7 +1042,7 @@ Women
 }
 
 
-#women .owl-nav {
+#services .owl-nav {
   text-align: center;
   position: absolute;
   width: 100%;
@@ -1050,22 +1050,22 @@ Women
   transform: translateY(-25px);
 }
 
-#women .owl-dots {
+#services .owl-dots {
   display: none;
 }
     
-#women .owl-nav .owl-prev{
+#services .owl-nav .owl-prev{
   position: absolute;
   left: -80px;
   outline: none;
 }
 
-#women .owl-nav .owl-prev span,
-#women .owl-nav .owl-next span {
+#services .owl-nav .owl-prev span,
+#services .owl-nav .owl-next span {
   opacity: 0;
 }
 
-#women .owl-nav .owl-prev:before {
+#services .owl-nav .owl-prev:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #2a2a2a;
@@ -1079,31 +1079,31 @@ Women
   border :1px solid #2a2a2a;
 }
 
-#women .owl-nav .owl-prev {
+#services .owl-nav .owl-prev {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#women .owl-nav .owl-prev:hover {
+#services .owl-nav .owl-prev:hover {
   opacity: 1;
 }
 
-#women .owl-nav .owl-next {
+#services .owl-nav .owl-next {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#women .owl-nav .owl-next:hover {
+#services .owl-nav .owl-next:hover {
   opacity: 1;
 }
 
-#women .owl-nav .owl-next{
+#services .owl-nav .owl-next{
   outline: none;
   position: absolute;
   right: -85px;
 }
 
-#women .owl-nav .owl-next:before {
+#services .owl-nav .owl-next:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #2a2a2a;
@@ -1123,49 +1123,49 @@ Kids
 ---------------------------------------------
 */
 
-#kids {
+#gallery {
   padding-top: 90px;
   padding-bottom: 90px;
   border-bottom: 1px solid #f8f8f8;
 }
 
-#kids .section-heading {
+#gallery .section-heading {
   margin-bottom: 60px;
 }
 
-#kids .item .down-content {
+#gallery .item .down-content {
   padding-top: 30px;
   position: relative;
   z-index: 3;
   background-color: #fff;
 }
 
-#kids .item .down-content h4 {
+#gallery .item .down-content h4 {
   font-size: 22px;
   color: #2a2a2a;
   font-weight: 700;
   margin-bottom: 8px;
 }
 
-#kids .item .down-content span {
+#gallery .item .down-content span {
   font-size: 18px;
   color: #a1a1a1;
   font-weight: 500;
   display: block;
 }
 
-#kids .item .down-content ul.stars {
+#gallery .item .down-content ul.stars {
   position: absolute;
   right: 0;
   top: 30px;
 }
 
-#kids .item .down-content ul.stars li {
+#gallery .item .down-content ul.stars li {
   display: inline;
   font-size: 13px;
 }
 
-#kids .item .thumb .hover-content {
+#gallery .item .thumb .hover-content {
   position: absolute;
   z-index: 2;
   text-align: center;
@@ -1176,22 +1176,22 @@ Kids
   transition: all .5s;
 }
 
-#kids .item .thumb:hover .hover-content {
+#gallery .item .thumb:hover .hover-content {
   bottom: 30px;
   opacity: 1;
   visibility: visible;
 }
 
-#kids .item .thumb {
+#gallery .item .thumb {
   position: relative;
 }
 
-#kids .item .thumb .hover-content ul li {
+#gallery .item .thumb .hover-content ul li {
   display: inline;
   margin: 0px 10px;
 }
 
-#kids .item .thumb .hover-content ul li a {
+#gallery .item .thumb .hover-content ul li a {
   width: 50px;
   height: 50px;
   text-align: center;
@@ -1202,7 +1202,7 @@ Kids
 }
 
 
-#kids .owl-nav {
+#gallery .owl-nav {
   text-align: center;
   position: absolute;
   width: 100%;
@@ -1210,22 +1210,22 @@ Kids
   transform: translateY(10px);
 }
 
-#kids .owl-dots {
+#gallery .owl-dots {
   display: none;
 }
     
-#kids .owl-nav .owl-prev{
+#gallery .owl-nav .owl-prev{
   position: absolute;
   left: -80px;
   outline: none;
 }
 
-#kids .owl-nav .owl-prev span,
-#kids .owl-nav .owl-next span {
+#gallery .owl-nav .owl-prev span,
+#gallery .owl-nav .owl-next span {
   opacity: 0;
 }
 
-#kids .owl-nav .owl-prev:before {
+#gallery .owl-nav .owl-prev:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #fff;
@@ -1239,31 +1239,31 @@ Kids
   border :1px solid #000;
 }
 
-#kids .owl-nav .owl-prev {
+#gallery .owl-nav .owl-prev {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#kids .owl-nav .owl-prev:hover {
+#gallery .owl-nav .owl-prev:hover {
   opacity: 1;
 }
 
-#kids .owl-nav .owl-next {
+#gallery .owl-nav .owl-next {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#kids .owl-nav .owl-next:hover {
+#gallery .owl-nav .owl-next:hover {
   opacity: 1;
 }
 
-#kids .owl-nav .owl-next{
+#gallery .owl-nav .owl-next{
   outline: none;
   position: absolute;
   right: -85px;
 }
 
-#kids .owl-nav .owl-next:before {
+#gallery .owl-nav .owl-next:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #fff;
@@ -1284,17 +1284,17 @@ Explore
 ---------------------------------------------
 */
 
-#explore {
+#about {
   padding-top: 90px;
   padding-bottom: 90px;
   border-bottom: 1px solid #f8f8f8;
 }
 
-#explore .left-content {
+#about .left-content {
   margin-right: 30px;
 }
 
-#explore .left-content h2 {
+#about .left-content h2 {
   font-size: 30px;
   font-weight: 300;
   color: #000;
@@ -1302,7 +1302,7 @@ Explore
     text-transform: uppercase;
 }
 
-#explore .left-content span {
+#about .left-content span {
   font-size: 16px;
   color: #606060;
   font-weight: 500;
@@ -1310,24 +1310,24 @@ Explore
   margin-top: 25px;
 }
 
-#explore .left-content .quote {
+#about .left-content .quote {
   margin-top: 25px;
 }
 
-#explore .left-content .quote i {
+#about .left-content .quote i {
   float: left;
   font-size: 32px;
   margin-right: 15px;
   margin-top: 10px;
 }
 
-#explore .left-content .quote p {
+#about .left-content .quote p {
   font-style: italic;
   color: #2a2a2a;
   font-weight: 500;
 }
 
-#explore .left-content p {
+#about .left-content p {
   font-size: 14px;
   color: #606060;
   font-weight: 500;
@@ -1335,40 +1335,40 @@ Explore
   margin-top: 25px;
 }
 
-#explore .left-content .main-border-button a {
+#about .left-content .main-border-button a {
   color: #2a2a2a;
   border-color: #2a2a2a;
   margin-top: 35px;
 }
 
-#explore .left-content .main-border-button a:hover {
+#about .left-content .main-border-button a:hover {
   background-color: #2a2a2a;
   color: #fff;
 }
 
-#explore img {
+#about img {
   width: 100%;
   overflow: hidden;
 }
 
-#explore .leather {
+#about .leather {
   margin-bottom: 30px;
 }
 
-#explore .first-image {
+#about .first-image {
   margin-bottom: 30px;
 }
 
-#explore .leather,
-#explore .types {
+#about .leather,
+#about .types {
   min-height: 255px;
   /*background-color: #f8f8f8;*/
   text-align: center;
   width: 100%;
 }
 
-#explore .leather h4,
-#explore .types h4 {
+#about .leather h4,
+#about .types h4 {
   font-size: 24px;
   font-weight: 700;
   color: #2a2a2a;
@@ -1376,8 +1376,8 @@ Explore
   margin-bottom: 5px;
 }
 
-#explore .leather span,
-#explore .types span {
+#about .leather span,
+#about .types span {
   font-size: 14px;
   font-style: italic;
   color: #606060;
@@ -2290,7 +2290,7 @@ responsive
   .main-banner .left-content {
     /*margin-bottom: 30px;*/
   }
-  #explore .left-content {
+  #about .left-content {
     margin-bottom: 30px;
   }
 
@@ -2423,17 +2423,17 @@ responsive
 }
 
 @media (width: 1024px){
-  #women .item .down-content h4{
+  #services .item .down-content h4{
     font-size: 20px;
   }
 }
 @media(max-width: 580px){
-  #explore .right-content .types {
+  #about .right-content .types {
     margin-top: 30px;
   }
 }
 @media (min-width: 1024px){
-  #explore .leather {
+  #about .leather {
      margin-bottom: 0;
   }
   #map .w-100{
@@ -2545,7 +2545,7 @@ body{
 .color-bold{
   color: #a5792b;
 }
-#women .owl-item:hover h4{
+#services .owl-item:hover h4{
   color: #ffde97;
 }
 @media(min-width: 768px){
